--- a/pack.toml
+++ b/pack.toml
@@ -1,6 +1,6 @@
 name = "Cccc's-Simple-Modpack"
 author = "Cccc_"
-version = "1.1.2"
+version = "1.19-v1.1.2"
 pack-format = "packwiz:1.1.0"
 
 [index]
