--- a/pack.toml
+++ b/pack.toml
@@ -1,6 +1,6 @@
 name = "Cccc's-Simple-Modpack"
 author = "Cccc_"
-version = "1.0.0"
+version = "1.16.5-v1.0.0"
 pack-format = "packwiz:1.1.0"
 
 [index]
