--- a/mods/fabric-language-kotlin.pw.toml
+++ b/mods/fabric-language-kotlin.pw.toml
@@ -1,13 +1,13 @@
 name = "Fabric Language Kotlin"
-filename = "fabric-language-kotlin-1.7.4+kotlin.1.6.21.jar"
+filename = "fabric-language-kotlin-1.8.1+kotlin.1.7.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Ha28R6CL/versions/1.7.4+kotlin.1.6.21/fabric-language-kotlin-1.7.4%2Bkotlin.1.6.21.jar"
+url = "https://cdn.modrinth.com/data/Ha28R6CL/versions/1.8.1+kotlin.1.7.0/fabric-language-kotlin-1.8.1%2Bkotlin.1.7.0.jar"
 hash-format = "sha1"
-hash = "57581e800d250c31aed8bc17fa7c2af9786c26a3"
+hash = "5bf9d5d91f89cfd4720ea55d735c4eefc30bcdaf"
 
 [update]
 [update.modrinth]
 mod-id = "Ha28R6CL"
-version = "iAzZrqan"
+version = "D2Y5G2KO"
