--- a/mods/dynamiccrosshair.pw.toml
+++ b/mods/dynamiccrosshair.pw.toml
@@ -1,13 +1,13 @@
 name = "Dynamic Crosshair"
-filename = "dynamiccrosshair-3.1+1.19.jar"
+filename = "dynamiccrosshair-3.3+1.19.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/ZcR9weSm/versions/3.1+1.19/dynamiccrosshair-3.1%2B1.19.jar"
+url = "https://cdn.modrinth.com/data/ZcR9weSm/versions/3.3+1.19/dynamiccrosshair-3.3%2B1.19.jar"
 hash-format = "sha1"
-hash = "57a4d66202c12a518ab7f62f85ca190fe237762e"
+hash = "0d72730d7529b393424a602fe35c102043075f71"
 
 [update]
 [update.modrinth]
 mod-id = "ZcR9weSm"
-version = "KdZ4nnQf"
+version = "SoTS6lF5"
