--- a/mods/roughly-enough-items.pw.toml
+++ b/mods/roughly-enough-items.pw.toml
@@ -1,13 +1,13 @@
 name = "Roughly Enough Items (REI)"
-filename = "RoughlyEnoughItems-9.1.500.jar"
+filename = "RoughlyEnoughItems-9.1.503.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nfn13YXA/versions/9.1.500+fabric/RoughlyEnoughItems-9.1.500.jar"
+url = "https://cdn.modrinth.com/data/nfn13YXA/versions/9.1.503+fabric/RoughlyEnoughItems-9.1.503.jar"
 hash-format = "sha1"
-hash = "5caf7eac6addd24a7e105ed62494e06b4101e18c"
+hash = "5a77807fdf2c846e4d4c67197ab085e16fd193a4"
 
 [update]
 [update.modrinth]
 mod-id = "nfn13YXA"
-version = "fr5biAMS"
+version = "IGQ8lQgu"
