--- a/mods/autohud.pw.toml
+++ b/mods/autohud.pw.toml
@@ -1,13 +1,13 @@
 name = "Auto HUD"
-filename = "autohud-2.0+1.19.jar"
+filename = "autohud-2.1+1.19.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/temczoTQ/versions/2.0+1.19/autohud-2.0%2B1.19.jar"
+url = "https://cdn.modrinth.com/data/temczoTQ/versions/2.1+1.19/autohud-2.1%2B1.19.jar"
 hash-format = "sha1"
-hash = "a4c912a3645eb7513268784d04aa70a6bebc6b51"
+hash = "ca7148beba255a68ee3f0932871ea4334614904f"
 
 [update]
 [update.modrinth]
 mod-id = "temczoTQ"
-version = "zTuQLyEl"
+version = "9hkuLTj0"
