--- a/mods/architectury-api.pw.toml
+++ b/mods/architectury-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Architectury API"
-filename = "architectury-5.8.29-fabric.jar"
+filename = "architectury-5.9.31-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/lhGA9TYQ/versions/5.8.29+fabric/architectury-5.8.29-fabric.jar"
+url = "https://cdn.modrinth.com/data/lhGA9TYQ/versions/5.9.31+fabric/architectury-5.9.31-fabric.jar"
 hash-format = "sha1"
-hash = "900f1d9509534600a151d0eeaeb472a1fbba9d81"
+hash = "2a932e9145b123591a78ea045e65b31bc8a330ac"
 
 [update]
 [update.modrinth]
 mod-id = "lhGA9TYQ"
-version = "LkkGgJ54"
+version = "d9yizwYu"
