--- a/mods/simple-voice-chat.pw.toml
+++ b/mods/simple-voice-chat.pw.toml
@@ -1,13 +1,13 @@
 name = "Simple Voice Chat"
-filename = "voicechat-fabric-1.19-2.2.50.jar"
+filename = "voicechat-fabric-1.19-2.2.52.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/fabric-1.19-2.2.50/voicechat-fabric-1.19-2.2.50.jar"
+url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/fabric-1.19-2.2.52/voicechat-fabric-1.19-2.2.52.jar"
 hash-format = "sha1"
-hash = "0b49e5497a566d48cf44bb51cc0204dd29fd59ff"
+hash = "a5430e1e96e46277a67071f0d0d359159b2ab725"
 
 [update]
 [update.modrinth]
 mod-id = "9eGKb6K1"
-version = "otwl7qXB"
+version = "7wGDl2Nx"
