--- a/mods/inventory-profiles-next.pw.toml
+++ b/mods/inventory-profiles-next.pw.toml
@@ -1,13 +1,13 @@
 name = "Inventory Profiles Next"
-filename = "InventoryProfilesNext-fabric-1.16-1.5.3.jar"
+filename = "InventoryProfilesNext-fabric-1.16-1.6.0.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/O7RBXm3n/versions/fabric-1.16.5-1.5.3/InventoryProfilesNext-fabric-1.16-1.5.3.jar"
+url = "https://cdn.modrinth.com/data/O7RBXm3n/versions/fabric-1.16.5-1.6.0/InventoryProfilesNext-fabric-1.16-1.6.0.jar"
 hash-format = "sha1"
-hash = "271dd49fc2a8d210727401420b4e8097900503af"
+hash = "ba6ce57a0f5fb3a3b57a8dad348d11ecd389cb9b"
 
 [update]
 [update.modrinth]
 mod-id = "O7RBXm3n"
-version = "XHLDeyeQ"
+version = "pdledX72"
