--- a/mods/tweakermore.pw.toml
+++ b/mods/tweakermore.pw.toml
@@ -1,13 +1,13 @@
 name = "TweakerMore"
-filename = "tweakermore-mc1.18.2-v3.4.2.jar"
+filename = "tweakermore-mc1.18.2-v3.5.0.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/GBeCx05I/versions/mc1.18.2-v3.4.2/tweakermore-mc1.18.2-v3.4.2.jar"
+url = "https://cdn.modrinth.com/data/GBeCx05I/versions/mc1.18.2-v3.5.0/tweakermore-mc1.18.2-v3.5.0.jar"
 hash-format = "sha1"
-hash = "c352b0242bba2282e3d887b7488522d1eaf69e55"
+hash = "e6307e09883b5f66cca1f8331f85b305b5b53cf1"
 
 [update]
 [update.modrinth]
 mod-id = "GBeCx05I"
-version = "Y2BcHiXC"
+version = "X6gziMoR"
