--- a/mods/moremcmeta.pw.toml
+++ b/mods/moremcmeta.pw.toml
@@ -1,13 +1,13 @@
 name = "MoreMcmeta"
-filename = "moremcmeta-1.19-3.0.4-fabric.jar"
+filename = "moremcmeta-1.19-3.0.5-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/HFlxNpln/versions/v1.19-3.0.4-fabric/moremcmeta-1.19-3.0.4-fabric.jar"
+url = "https://cdn.modrinth.com/data/HFlxNpln/versions/v1.19-3.0.5-fabric/moremcmeta-1.19-3.0.5-fabric.jar"
 hash-format = "sha1"
-hash = "5ff63d72251c0c13f443f219860fbde3b09ee13d"
+hash = "1bb7651185d532fbf07810e9e78972c36eb2bb5d"
 
 [update]
 [update.modrinth]
 mod-id = "HFlxNpln"
-version = "ASJdg7CD"
+version = "wR5IxFwJ"
