--- a/mods/debugify.pw.toml
+++ b/mods/debugify.pw.toml
@@ -1,13 +1,13 @@
 name = "Debugify"
-filename = "debugify-2.2.0-fabric-1.19.jar"
+filename = "debugify-2.3.1-fabric-1.19.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/QwxR6Gcd/versions/2.2.0-fabric/debugify-2.2.0-fabric-1.19.jar"
+url = "https://cdn.modrinth.com/data/QwxR6Gcd/versions/2.3.1-fabric/debugify-2.3.1-fabric-1.19.jar"
 hash-format = "sha1"
-hash = "b45d544fc8e7266d167bf76ae326f22fe79b4d2a"
+hash = "ced984cb3ce2941f8ea8e1ff63b009d958795092"
 
 [update]
 [update.modrinth]
 mod-id = "QwxR6Gcd"
-version = "LVTec1Rh"
+version = "4J87zok9"
