--- a/mods/vmp-fabric.pw.toml
+++ b/mods/vmp-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Very Many Players (Fabric)"
-filename = "vmp-fabric-mc1.19-0.2.0+beta.6.20-all.jar"
+filename = "vmp-fabric-mc1.19-0.2.0+beta.6.23-all.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/wnEe9KBa/versions/0.2.0+beta.6.20+1.19/vmp-fabric-mc1.19-0.2.0%2Bbeta.6.20-all.jar"
+url = "https://cdn.modrinth.com/data/wnEe9KBa/versions/0.2.0+beta.6.23+1.19/vmp-fabric-mc1.19-0.2.0%2Bbeta.6.23-all.jar"
 hash-format = "sha1"
-hash = "df2da5f257962ee5ff669a41d032b054d86ee6d3"
+hash = "b8bdf9d167644acd1d072ca7938472295fa418cb"
 
 [update]
 [update.modrinth]
 mod-id = "wnEe9KBa"
-version = "s4Cb9UR6"
+version = "5A7EoPlS"
