--- a/mods/debugify.pw.toml
+++ b/mods/debugify.pw.toml
@@ -1,13 +1,13 @@
 name = "Debugify"
-filename = "debugify-2.3.1-fabric-1.19.jar"
+filename = "debugify-2.3.2-fabric-1.19.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/QwxR6Gcd/versions/2.3.1-fabric/debugify-2.3.1-fabric-1.19.jar"
+url = "https://cdn.modrinth.com/data/QwxR6Gcd/versions/2.3.2-fabric/debugify-2.3.2-fabric-1.19.jar"
 hash-format = "sha1"
-hash = "ced984cb3ce2941f8ea8e1ff63b009d958795092"
+hash = "928674a817a9fe6d025583a486b15f14bebe9edf"
 
 [update]
 [update.modrinth]
 mod-id = "QwxR6Gcd"
-version = "4J87zok9"
+version = "1Wc2PZ7G"
