--- a/mods/betterhurtcam.pw.toml
+++ b/mods/betterhurtcam.pw.toml
@@ -3,11 +3,11 @@ filename = "betterhurtcam-1.1.0+1.18.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/o4y0N2hu/versions/1.1.0/betterhurtcam-1.1.0%2B1.18.jar"
+url = "https://cdn.modrinth.com/data/o4y0N2hu/versions/1.1.0+1.18/betterhurtcam-1.1.0%2B1.18.jar"
 hash-format = "sha1"
-hash = "bc09cb25469334c7c56befe6b9df15cc60dffc0e"
+hash = "00cc5110a78cb3f7dab3af3773a42497f017c6ae"
 
 [update]
 [update.modrinth]
 mod-id = "o4y0N2hu"
-version = "SRRnsABQ"
+version = "Es7Qx8HL"
